Fixed sonar issues.  Updated SecurityConfig.java due to deprecated methods.